<resources>
    <string name="app_name">CMHY</string>
    <string name="app_version">1.2.0  (Build 102201) </string>
    <string name="app_codename">- Merovingian -</string>
    <string name="main_text">1.2.0</string>
    <string name="apo_version_html"><![CDATA[ <b>Version</b> 1.2.0 (Build 102201) ]]></string>
    <string name="search_page">Searching...</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="deeplink">Deep Link</string>
    <string name="search_keyword">ค้นหา...</string>
    <string name="search_hint">ค้นหา...เชียงใหม่ (*อำเภอเมือง)</string>
    <string name="subMenuFranchise">สาขา</string>
    <string name="subMenuNav">นำทาง</string>
    <string name="subMenuReport">แจ้งปรับปรุงข้อมูล</string>
    <string name="appbarFav">Favorite</string>
    <string name="appbarMap">แสดงแผนที่</string>
    <string name="appbarNav">นำทาง</string>
    <string name="appbarReport">แจ้งปัญหา</string>
    <string name="appbarSetting">เพิ่มเติม</string>
    <string name="null_text" />
    <string name="search_text">Search</string>
    <string name="navigate_plact_cat_destination_button">Category >> </string>
    <string name="coming_text">Coming Soon..</string>
    <string name="no_internet_header_text">ไม่สามารถเชื่อมต่ออินเทอร์เน็ต</string>
    <string name="place_detail_webview_warning">แสดงผลแบบ WebView ข้อมุลผ่านเว็บ CMHY (ลิงค์จะเปิดเว็บเบราว์เซอร์)  </string>
    <string name="no_internet_retry_text">กรุณาตรวจสอบสัญญาณ Wifi หรือ สัญญาณโทรศัพท์มือถือ</string>
    <string name="information_text">ข้อมูลเพิ่มเติม</string>
    <string name="textReport">ช่วยเราปรับปรุงข้อมูล</string>
    <string name="textPlaceClose">สถานที่นี้อาจจะปิด/ย้ายแล้ว </string>
    <string name="name_map_full_button">ขยายแผนที่</string>
    <string name="name_navigation_button">นำทาง</string>
    <string name="name_franchise_button">สาขา</string>
    <string name="name_more_detail_button">แสดงข้อมูลเพิ่มเติม</string>
    <string name="name_report_button">ช่วยเราปรับปรุงข้อมูล</string>
    <string name="name_submit_report_button">กรอกแบบฟอร์ม</string>
    <string name="name_share_button">Share</string>
    <string name="icon_null_text">Icon</string>
    <string name="image_null_text">Image</string>
    <string name="about_version_text">Version</string>
    <string name="about_comment_text">**เวอร์ชั่น บริการข้อมูลฉพาะอำเภอเมืองเชียงใหม่**</string>
    <string name="about_extend_amphor">**สำหรับท่านที่ต้องการข้อมูลนอกเหนือจากอำเภอเมือง สามารถสืบค้นและดูข้อมูลได้ที่เว็บไซต์เราที่ www.cmhy.city </string>
    <string name="label_full_map_text">แผนที่ขนาดใหญ่</string>
    <string name="label_setting_text">เพิ่มเติม</string>
    <string name="label_rule_text">นโยบายการใช้งาน</string>
    <string name="label_report_text">ช่วยเราปรับปรุงข้อมูล</string>
    <string name="label_about_text">เกี่ยวกับเรา</string>
    <string name="label_place_detail_des_text">รายละเอียดเพิ่มเติม</string>
    <string name="search_et_text">Search....</string>
    <string name="internet_connection_text">Internet Connection....</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_banner_place_list">ca-app-pub-4619737788076129/2652119195</string>
    <string name="admob_banner_search">ca-app-pub-4619737788076129/5136265005</string>
    <string name="admob_banner_place_detail">ca-app-pub-4619737788076129/8692366634</string>
    <string name="admob_banner_place_category">ca-app-pub-4619737788076129/6624412972</string>
    <string name="admob_banner_franchise_list">ca-app-pub-4619737788076129/2575239719</string>
    <string name="admob_banner_description">ca-app-pub-4619737788076129/2865378786</string>
    <string name="admob_interstitial">ca-app-pub-4619737788076129/7287377475</string>
    <string name="admob_banner_place_detail_footer">ca-app-pub-4619737788076129/6723455677</string>
    <string name="admob_banner_place_list_smart_footer">ca-app-pub-4619737788076129/4522790010
</string>
    <string name="admob_test_app_open">ca-app-pub-3940256099942544/3419835294</string>
    <string name="admob_test_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_test_native_advanced">ca-app-pub-3940256099942544/2247696110</string>
    <string name="main_cat_01">ราชการ</string>
    <string name="main_cat_03">อาหาร</string>
    <string name="main_cat_04">ร้านค้า</string>
    <string name="main_cat_05">ส่วนตัว </string>
    <string name="main_cat_06">กีฬา </string>
    <string name="main_cat_07">การศึกษา</string>
    <string name="main_cat_08">สุขภาพ </string>
    <string name="main_cat_09">ที่พัก</string>
    <string name="main_cat_10">ยานยนต์</string>
    <string name="main_cat_11">ธุรกิจ</string>
    <string name="main_cat_12">บริการ</string>
    <string name="main_cat_13">การเงิน</string>
    <string name="main_cat_14">ศาสนสถาน</string>
    <string name="main_cat_15">ขนส่ง</string>
    <string name="main_cat_16">ท่องเที่ยว</string>
    <string name="cat_23">งานราชการ</string>
    <string name="cat_10">สำนักงานรัฐ</string>
    <string name="cat_116">สถานกงสุล</string>
    <string name="cat_12">ไปรษณีย์ไทย</string>
    <string name="cat_4">สถานีดับเพลิง</string>
    <string name="cat_11">สถานีตำรวจ</string>
    <string name="cat_24">ก๋วยเตี๋ยว</string>
    <string name="cat_148">บุฟเฟ่ต์</string>
    <string name="cat_26">เบเกอรี่</string>
    <string name="cat_27">กาแฟ/คาเฟ่</string>
    <string name="cat_28">อาหารตามสั่ง</string>
    <string name="cat_152">อาหารทั่วไป</string>
    <string name="cat_30">ฟาสฟู๊ด</string>
    <string name="cat_124">ข้าวซอย</string>
    <string name="cat_147">เครื่องดื่ม</string>
    <string name="cat_25">ปิ้งย่าง/จุ่ม</string>
    <string name="cat_149">อาหารนานาชาติ </string>
    <string name="cat_100">อาหารพื้นเมือง </string>
    <string name="cat_150">มังสวิรัติ </string>
    <string name="cat_165">อาหารฮาลาล </string>
    <string name="cat_164">อาหารปักษ์ใต้ </string>
    <string name="cat_166">ไอศกรีม </string>
    <string name="cat_231">ขนมจีน </string>
    <string name="cat_29">ของว่าง </string>
    <string name="cat_204">ข้าวต้ม-โจ๊ก </string>
    <string name="cat_205">อาหารอีสาน </string>
    <string name="cat_212">สเต็ก </string>
    <string name="cat_208">คาเฟ่ 24HR </string>
    <string name="cat_220">ผัดไทย </string>
    <string name="cat_216">สุกี้/หม้อไฟ/หมูจุ่ม</string>
    <string name="cat_229">หม่าล่า </string>
    <string name="cat_237">ชานมไข่มุก </string>
    <string name="cat_238">ลูกชิ้น </string>
    <string name="cat_248">เบอร์เกอร์ </string>
    <string name="cat_247">พิซซ่า </string>
    <string name="cat_17">อาหารญี่ปุ่น </string>
    <string name="cat_233">คาเฟ่สัตว์เลี้ยง </string>
    <string name="cat_272">หมูสะเต๊ะ </string>
    <string name="cat_271">ข้าวมันไก่ </string>
    <string name="cat_270">ข้าวขาหมู </string>
    <string name="cat_273">เต่าบิน </string>
    <string name="cat_269">ชาบู </string>
    <string name="cat_268">ขนมหวาน </string>
    <string name="cat_31">ตลาด</string>
    <string name="cat_18">มินิมาร์ท</string>
    <string name="cat_32">ขายของชำ</string>
    <string name="cat_8">ซุปเปอร์มาร์เกต</string>
    <string name="cat_93">เซเว่นอีเลเว่น</string>
    <string name="cat_34">วัตถุดิบทั่วไป</string>
    <string name="cat_155">ชอปปิ้งมอลล์</string>
    <string name="cat_187">อาหารแช่แช็ง</string>
    <string name="cat_162">ไก่ห้าดาว</string>
    <string name="cat_156">ตลาดนัด</string>
    <string name="cat_163">คอมมูนิตี้มอลล์</string>
    <string name="cat_218">อาหารสด</string>
    <string name="cat_239">สตรีทฟู้ด</string>
    <string name="cat_244">ร้านขายข้าว</string>
    <string name="cat_243">ผัก/ผลไม้</string>
    <string name="cat_35">เสริมสวย</string>
    <string name="cat_102">เสื้อผ้าสตรี</string>
    <string name="cat_36">นวด/สปา</string>
    <string name="cat_37">ตัดผมชาย</string>
    <string name="cat_38">เครื่องสำอางค์</string>
    <string name="cat_123">เสื้อผ้ามือสอง</string>
    <string name="cat_153">ตัดเสื้อ</string>
    <string name="cat_154">เครื่องแต่งกาย</string>
    <string name="cat_197">ชุดเช่า</string>
    <string name="cat_199">แม่และเด็ก</string>
    <string name="cat_228">รองเท้า</string>
    <string name="cat_265">ซ่อมแซม-เครื่องแต่งกาย</string>
    <string name="cat_40">อุปกรณ์กีฬา</string>
    <string name="cat_41">เทนนิส</string>
    <string name="cat_42">ฟุตบอล</string>
    <string name="cat_43">ฟิตเนส</string>
    <string name="cat_44">สระว่ายน้ำ</string>
    <string name="cat_201">แบดมินตัน</string>
    <string name="cat_213">โยคะ</string>
    <string name="cat_214">สนุกเกอร์</string>
    <string name="cat_215">มวยไทย</string>
    <string name="cat_250">ออกกำลังกาย</string>
    <string name="cat_249">บอร์ดเกม</string>
    <string name="cat_47">กีฬาอื่นๆ</string>
    <string name="cat_175">อนุบาล</string>
    <string name="cat_168">โรงเรียน</string>
    <string name="cat_169">วิทยาลัย</string>
    <string name="cat_174">มหาวิทยาลัย</string>
    <string name="cat_211">มหาวิทยาลัยเชียงใหม่</string>
    <string name="cat_122">สถาบันการสอน</string>
    <string name="cat_176">กวดวิชา</string>
    <string name="cat_144">ห้องสมุด</string>
    <string name="cat_256">ดนตรี/เต้น</string>
    <string name="cat_114">โรงพยาบาล</string>
    <string name="cat_99">รักษาทั่วไป</string>
    <string name="cat_51">รักษาตา</string>
    <string name="cat_50">รักษาฟัน</string>
    <string name="cat_179">กระดูกและข้อ</string>
    <string name="cat_178">หูคอจมูก</string>
    <string name="cat_202">สูติ-นารีเเวช</string>
    <string name="cat_203">กุมารเวช</string>
    <string name="cat_181">จิตเวช</string>
    <string name="cat_48">คลินิกความงาม</string>
    <string name="cat_180">แพทย์แผนไทย</string>
    <string name="cat_177">แล็ปสุขภาพ</string>
    <string name="cat_49">ขายยา</string>
    <string name="cat_111">แว่นตา</string>
    <string name="cat_217">ผิวหนัง</string>
    <string name="cat_53">สุขภาพอื่นๆ</string>
    <string name="cat_52">รักษาสัตว์</string>
    <string name="cat_226">รพ.สวนดอก</string>
    <string name="cat_232">สมุนไพร</string>
    <string name="cat_94">เกสท์เฮาส์</string>
    <string name="cat_56">โฮสเทล</string>
    <string name="cat_57">โรงแรม</string>
    <string name="cat_59">อพาร์ทเมนท์</string>
    <string name="cat_55">ห้องเช่า หอพัก</string>
    <string name="about_document"><![CDATA[
    <p>เชียงใหม่เฮลพ์ยู หรือ CMHY (Chiang Mai Help You) เริ่มต้นมาจากการคุยกันเล่นๆ เมื่อ สิงหาคม ปี 2557 ผู้พัฒนาซอฟท์แวร์ 2 คน สุดชาย และ พรรษเศวต RGB7 ผู้พัฒนาร้านเล็กๆคนเชียงใหม่ ได้พบว่าการค้นหาข้อมูลการในพื้นที่ในเมืองเชียงใหม่ เมื่อสำรวจ สถานที่/กิจการธุรกิจขนาดเล็ก/กลาง/ใหญ่ พบว่าข้อมูลหลายๆส่วนยังขาดไปไม่ครบแม่นยำตามที่ต้องการ ได้คุยปรึกษา สรุปว่าในเมื่อเราเป็นคนในพื้นที่เชียงใหม่ และเป็นบ้านเมืองเกิดในเชียงใหม่ อยากจะทำอะไรมอบตอบแทนบ้านเกิดเมืองนอนเมืองเชียงใหม…</p>

    <p>ได้เริ่มวางแผนออกแบบพัฒนาเว็บไซต์ในฝันที่ใช้ง่ายที่สุดตามที่วาดฝันไว้ เพื่อให้ระบบมีประสิทธิภาพสูงสุด จึงออกแบบระบบทั้งหมดและเก็บรวบรวมข้อมูลด้วยตนเอง เพื่อพัฒนาซอฟท์แวร์สำหรับบ้านของเราให้มีระบบค้นหาข้อมูลของเชียงใหม่ที่ละเอียดและมีความใกล้เคียงและมีคุณภาพแบบที่ใจฝันไว้...</p>


     <p>ทีมงานได้ลงพื้นที่เริ่มเก็บรวมรวมข้อมูลและตรวจสอบ โดยจัดเก็บข้อมูลพื้นฐานกิจการร้าน สถานที่ทั่วไป ทุกที่ที่ไปเยือน เพื่อบันทึกลงในฐานข้อมูล และปี 2564 ได้พัฒนาแอปพริเคชั่น Android สำหรับเป็นต้นแบบแรก อยากให้ชาวเชียงใหม่และผู้มาเยือนได้ค้นหาค้นพบกิจการ สถานที่สำคัญและเป็นประโยชน์ต่อผู้ใช้งาน โดยหวังอีกว่าผู้ที่มาเยือนเชียงใหม่ หรือนักท่องเที่ยวต่างชาติ จะได้ข้อมูลที่เข้าใจง่ายรวดเร็ว ใกล้เคียงความถูกต้องให้มากที่สุด และหวังว่าสิ่งที่เราทำได้เป็นส่วนหนึ่งที่จะทำให้เศรษฐกิจความเป็นอยู่ของชาวเชียงใหม่ได้เชื่อมต่อและติดต่อกัน ทำให้บ้านเมืองเชียงใหม่พัฒนาขับเคลื่อนไปข้างหน้า ด้วยความภูมิใจจาก เราสองคนผู้พัฒนาซอฟท์แวร์เล็กๆ สร้างสรรค์โดยคนเชียงใหม่ :)
    </p>

    <br> ]]></string>
</resources>