<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-46dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <ImageView
                    android:id="@+id/cmhy_logo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_cmhy_logo_2020_use"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_version_text"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.339"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cmhy_logo" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/about_comment_text"
                    android:textColor="@color/colorTextSecond"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />


                <Button
                    android:id="@+id/button_version"
                    style="@style/buttonPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Version"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_baseline_check_circle_outline_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <View
                    android:id="@+id/view"
                    style="@style/Divider"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_version" />

                <ImageView
                    android:id="@+id/rgb7_logo"
                    android:layout_width="150dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_rgb7_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/about_text"
                    style="@style/TextReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="8dp"
                    android:text="@string/about_document"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rgb7_logo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/app_version"
                    android:textColor="@color/colorTextGray"

                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="32dp"
                    android:textAlignment="center"
                    android:text="@string/about_extend_amphor"
                    android:textColor="@color/colorAuto"
                    android:textSize="14sp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />


            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
